WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267708
[WebGPU] Release assert running shader,validation,shader_io,* tests
https://bugs.webkit.org/show_bug.cgi?id=267708
Summary
[WebGPU] Release assert running shader,validation,shader_io,* tests
Mike Wyrzykowski
Reported
2024-01-18 09:43:22 PST
[WebGPU] Release assert running shader,validation,shader_io,* tests
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-18 09:43:37 PST
<
rdar://problem/121199735
>
Mike Wyrzykowski
Comment 2
2024-01-18 09:47:30 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22920
EWS
Comment 3
2024-01-19 11:52:44 PST
Committed
273231@main
(c46dee2bb6ab): <
https://commits.webkit.org/273231@main
> Reviewed commits have been landed. Closing PR #22920 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug