[WebGPU] Release assert running shader,validation,shader_io,* tests https://bugs.webkit.org/show_bug.cgi?id=267708 <radar://121199735>

Reviewed by Tadeu Zagallo.

Bool types were not supported, add support for them.

* Source/WebGPU/WebGPU/RenderPipeline.mm:
(WebGPU::componentsForDataType):
* Source/WebGPU/WebGPU/ShaderModule.mm:
(WebGPU::metalDataTypeFromPrimitive):

Canonical link: https://commits.webkit.org/273231@main